--- a/CV_DuyAnh-B1700326/index.html
+++ b/CV_DuyAnh-B1700326/index.html
@@ -6,15 +6,15 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>DUY ANH</title>
     <link rel="stylesheet" href="main.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.0/css/all.min.css"> 
     <!-- <link rel="stylesheet" href="./assets/fonts/fontawesome-free-6.1.2-web/css/all.min.css"> -->
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.0/css/all.min.css">     <!-- Sử dụng thư viện Online -->
-
+    
 </head>
 <body>
     <div class="Container">
         <div class="Container__Left"> 
             <div class="Profile">
-                <div class="Imgicon">
+                <div class="Img-avatar">
                     <img src="./assets/img/avatar.jpg" alt="avatar">
                 </div>
                 <h1>NGUYỄN DUY ANH <br> </h1>
